implemented Fruit shop logic